--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- 
     - custom css link
   -->
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./public/css/style.css" />
 
     <!-- 
     - google font link
@@ -90,7 +90,7 @@
       <div class="header-bottom">
         <div class="container">
           <a href="#" class="logo">
-            <img src="./assets/images/logo1.png" alt="Homeverse logo" />
+            <img src="./public/images/logo1.png" alt="Homeverse logo" />
           </a>
 
           <nav class="navbar" data-navbar>
