--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <nav class="navbar" data-navbar>
             <div class="navbar-top">
               <a href="#" class="logo">
-                <img src="./assets/images/logo1.png" alt="Homeverse logo" />
+                <img src="./public/images/logo1.png" alt="Homeverse logo" />
               </a>
 
               <button
@@ -204,7 +204,7 @@
 
             <figure class="hero-banner">
               <img
-                src="./assets/images/hero-banner.png"
+                src="./public/images/hero-banner.png"
                 alt="Modern house model"
                 class="w-100"
               />
@@ -220,12 +220,12 @@
           <div class="container">
             <figure class="about-banner">
               <img
-                src="./assets/images/about-banner-1.png"
+                src="./public/images/about-banner-1.png"
                 alt="House interior"
               />
 
               <img
-                src="./assets/images/about-banner-2.jpg"
+                src="./public/images/about-banner-2.jpg"
                 alt="House interior"
                 class="abs-img"
               />
@@ -302,7 +302,7 @@
                 <div class="service-card">
                   <div class="card-icon">
                     <img
-                      src="./assets/images/service-1.png"
+                      src="./public/images/service-1.png"
                       alt="Service icon"
                     />
                   </div>
@@ -329,7 +329,7 @@
                 <div class="service-card">
                   <div class="card-icon">
                     <img
-                      src="./assets/images/service-2.png"
+                      src="./public/images/service-2.png"
                       alt="Service icon"
                     />
                   </div>
@@ -357,7 +357,7 @@
                 <div class="service-card">
                   <div class="card-icon">
                     <img
-                      src="./assets/images/service-3.png"
+                      src="./public/images/service-3.png"
                       alt="Service icon"
                     />
                   </div>
@@ -400,7 +400,7 @@
                   <figure class="card-banner">
                     <a href="#">
                       <img
-                        src="./assets/images/property-1.jpg"
+                        src="./public/images/property-1.jpg"
                         alt="New Apartment Nice View"
                         class="w-100"
                       />
@@ -472,7 +472,7 @@
                     <div class="card-author">
                       <figure class="author-avatar">
                         <img
-                          src="./assets/images/author.jpg"
+                          src="./public/images/author.jpg"
                           alt="William Seklo"
                           class="w-100"
                         />
@@ -509,7 +509,7 @@
                   <figure class="card-banner">
                     <a href="#">
                       <img
-                        src="./assets/images/property-2.jpg"
+                        src="./public/images/property-2.jpg"
                         alt="Modern Apartments"
                         class="w-100"
                       />
@@ -581,7 +581,7 @@
                     <div class="card-author">
                       <figure class="author-avatar">
                         <img
-                          src="./assets/images/author.jpg"
+                          src="./public/images/author.jpg"
                           alt="William Seklo"
                           class="w-100"
                         />
@@ -618,7 +618,7 @@
                   <figure class="card-banner">
                     <a href="#">
                       <img
-                        src="./assets/images/property-3.jpg"
+                        src="./public/images/property-3.jpg"
                         alt="Comfortable Apartment"
                         class="w-100"
                       />
@@ -690,7 +690,7 @@
                     <div class="card-author">
                       <figure class="author-avatar">
                         <img
-                          src="./assets/images/author.jpg"
+                          src="./public/images/author.jpg"
                           alt="William Seklo"
                           class="w-100"
                         />
@@ -756,7 +756,7 @@
         <div class="container">
           <div class="footer-brand">
             <a href="#" class="logo">
-              <img src="./assets/images/logo-white.png" alt="HomeBase logo" />
+              <img src="./public/images/logo-white.png" alt="HomeBase logo" />
             </a>
 
             <p class="section-text">
@@ -923,7 +923,7 @@
     <!-- 
     - custom js link
   -->
-    <script src="./assets/js/script.js"></script>
+    <script src="./public/js/script.js"></script>
 
     <!-- 
     - ionicon link
